# zap-vm

./: ARCH.md  Cargo.toml  README.md
benches/: eval.rs  jit_vs_interpreter.rs  program.rs
src/: assembler.rs  block.rs  eval.rs  jit.rs  lib.rs  program.rs  program_tests.rs  sequence.rs
